# MAG

./: .gitignore  CMakeLists.txt  README.md
include/: distance.h  index_mag.h  neigbor.h  parameters.h  util.h
script/: build.sh  run.sh
src/: index_map.cpp
test/: CMakeLists.txt  test_mag.cpp
